<resources>
    <string name="app_name">LIT VOTING APP</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="previous">Log Out</string>

    <!--    Fragment First-->
    <string name="login">Enter Admin Name</string>
    <string name="password">Enter Password</string>
    <string name="next">Log In</string>
    <string name="sign_up">Sing Up</string>
    <string name="retreive_login">Forgot Password</string>

    <!--    Admin Sign Up Fragment-->
    <string name="sign_up_second_name">Enter Second Name</string>
    <string name="sign_up_confirm_password">Confirm Password</string>


    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>