<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="3dp"
    tools:context=".FirstFragment">

    <EditText
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login"
        android:layout_marginTop="30dp"
        android:importantForAutofill="no"
        android:inputType="textCapSentences|textAutoCorrect"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginTop="40dp"
        android:inputType="textPassword"
        android:importantForAutofill="no"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"/>

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_marginTop="30dp"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"/>

    <Button
        android:id="@+id/button_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_marginTop="30dp"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"/>

    <Button
        android:id="@+id/retrieve_login_and_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/retreive_login"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="320dp"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"/>
</LinearLayout>
</ScrollView>


